<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SMSActivity!</string>
    <string name="app_name">SMS</string>
    <string name="headphoto">Head Photo</string>
    <string name="smshint">Input SMS</string>
    <string name="addresshint">Input Contact</string>
    <string name="send">Send</string>
    
    <string name="me">I</string>
    <string name="say">Said</string>

    <!-- Action bar menu -->
    <string name="option">Option</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="newsms">New</string>
    <string name="select">Select</string>
    <string name="call">Call</string>
    
    <!-- SMS send hint -->
    <string name="sent">SMS was sent</string>
    <string name="delivered">SMS was delivered</string>
    <string name="failure_generic">Generic failure</string>
    <string name="failure_noservice">No service</string>
    <string name="failure_nullpdu">Null PDU</string>
    <string name="failure_radiooff">Radio off</string>
    <string name="failure_canceled">SMS not delivered</string>
    <string name="null_content">(No Content)</string>
    <string name="label_account">Account:</string>
    <string name="fetion_accoount_hint">Your Phone or Fetion ID</string>
    <string name="password_hint">Your password</string>
    <string name="label_password">Password:</string>
    <string name="login">Login</string>
    <string name="label_hidden">Hidden:</string>
    <string name="label_verify">Verify:</string>
    <string name="verify_code_hint">Input the code</string>

</resources>