<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_account" />

            <EditText
                android:id="@+id/et_fetion_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fetion_accoount_hint"
                android:lines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password" />

            <EditText
                android:id="@+id/et_fetion_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hidden" />

            <CheckBox
                android:id="@+id/cb_fetion_presence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_verify"
            android:visibility="gone"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_verify" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/iv_verify_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/label_verify"
                    android:src="@drawable/ic_launcher"
                    android:maxHeight="40dp"
                    android:maxWidth="80dp" />

                <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/verify_code_hint" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/login" />
        </TableRow>
    </TableLayout>

</LinearLayout>